kubernetes/deployment-forn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front
    spec:
      containers:
      - image: front:1.0.0-SNAPSHOT
        name: front
        resources: {}
status: {}
