kubernetes/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: front
  type: ClusterIP
status:
  loadBalancer: {}
