kubernetes/ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: demo
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: demo
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
