kubernetes/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: front
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: front
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
